--- a/index.html
+++ b/index.html
@@ -1,4 +1,55 @@
-<html><body>
-<h1><center> I am Mahdi Qasemi. Welcome to my personal site. </center></h1>
-<h2><center> Contact me: Qasemi.mhdi@gmail.com </center></h2>
-</body></html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=\, initial-scale=1.0" />
+    <title>Mahdi Qasemi</title>
+  </head>
+  <body style="background-color: orange; color: white; text-align: center;">
+    <div
+      class="footer"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background-color: green;
+      "
+    >
+      <p>Be STRONG!</p>
+    </div>
+    <div
+      style="
+        padding: 10px;
+        border: 1px solid black;
+        background-color: rgb(162, 2, 255);
+        border-radius: 50px;
+        width: 40%;
+        margin-top: 180px;
+        margin-right: auto;
+        margin-left: auto;
+      "
+    >
+      <h1>سلام</h1>
+      <h1>من مهدی قاسمی هستم</h1>
+      <h2>اگه با من کاری داشتید با ایمیل زیر در ارتباط باشید</h2>
+      <a
+        style="text-decoration: none; color: silver;"
+        href="mailto:mhdi.qasemi@gmail.com"
+      >
+        <h2>Mhdi.Qasemi@gmail.com</h2></a
+      >
+    </div>
+    <div
+      class="footer"
+      style="
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        background-color: green;
+      "
+    >
+      <p>Be HAPPY!</p>
+    </div>
+  </body>
+</html>
