--- a/index.html
+++ b/index.html
@@ -4,6 +4,110 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: "Courier New", Courier, monospace;
+            background: lightsalmon;
+            border: none;
+        }
+
+        a {
+            text-decoration: none;
+        }
+
+        .nav {
+            float: right;
+            display: flex;
+            list-style-type: none;
+        }
+
+        .navlink {
+            color: black;
+            padding: 1rem 5rem;
+            font-weight: bolder;
+        }
+
+        .logo a {
+            font-family: fantasy;
+            font-size: 5rem;
+        }
+
+        .logo {
+            padding: 2rem;
+            z-index: 2;
+            position: relative;
+        }
+
+        .back {
+            position: absolute;
+            z-index: 0;
+            left: -8rem;
+            top: -25px;
+        }
+
+        .back1 {
+            position: absolute;
+            z-index: 1;
+            right: 0;
+            top: -1rem;
+        }
+
+        .content {
+            z-index: 2;
+            position: relative;
+            text-align: center;
+            background: rgba(250, 250, 250, 0.6);
+            padding: 1rem;
+            border-radius: 30px;
+            box-shadow: 0 0 2rem rgba(0, 0, 0, 0.5);
+            width: 60%;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        .nav {
+            position: relative;
+            z-index: 4;
+        }
+
+
+        .footer {
+            position: fixed;
+            bottom: -7%;
+            left: -6%;
+            width: 100%;
+            height: 6%;
+            background: lightgreen;
+            /* text-align: center; */
+            padding-top: 5px;
+            padding-left: 6rem;
+            transform: rotate(4deg);
+            /* padding: rem; */
+        }
+
+        .footer p {
+            color: black;
+        }
+
+        /* 
+.footer:before {
+    content: "";
+    background: rgba(200, 200, 250, 0.9);
+    transform: rotate(1deg);
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    z-index: 0;
+    margin: auto;
+  } */
+    </style>
     <title>Document</title>
 </head>
 
@@ -106,7 +210,7 @@
     <div class="content">
         <h1>Welcome to my website.</h1>
         <h2>Design is my dream.</h2>
-            </div>
+    </div>
     <!-- <div class="side">
         <h2>Sidebar</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, dolorum! Ipsum eum iste voluptates optio voluptas eius repudiandae aut quidem assumenda atque temporibus voluptate, architecto eveniet dignissimos minima sit! Nihil.</p>
