--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     margin: auto;
   } */
     </style>
-    <title>Document</title>
+    <title>مهدی قاسمی</title>
 </head>
 
 <body>
@@ -145,7 +145,7 @@
                     <a href="#">Blog</a>
                 </li>
                 <li class="navlink">
-                    <a href="#">Contact</a>
+                    <a href="mailto:mahdi.ghasemi1404@gmail.com">Contact</a>
                 </li>
             </ul>
         </div>
